# hexchat

./: .gitattributes  .gitignore  CLAUDE.md  IRCV3_IMPLEMENTATION_PLAN.md  MACOS_BUNDLE_PLAN.md  OAUTH_IMPLEMENTATION_PLAN.md  meson.build  meson_options.txt  readme.md
apple/macos/: .swift-format  Package.swift
apple/macos/HexChatApple/: .gitignore
apple/macos/HexChatApple/HexChatApple/: BasicRuntimeController.swift  ContentView.swift  HexChatAppleApp.swift  RuntimeBridge.swift
apple/macos/HexChatApple/HexChatApple.xcodeproj/: project.pbxproj
apple/macos/HexChatApple/HexChatAppleTests/: HexChatAppleTests.swift
apple/macos/Sources/AppleAdapterBridge/: module.modulemap
apple/macos/Sources/AppleAdapterBridge/include/: bridge.h  hexchat-apple-public.h
apple/macos/Sources/HexChatAppleNetworkE2E/: main.swift
apple/macos/Sources/HexChatAppleShell/: AppMain.swift  CommandInputView.swift  ContentView.swift  DockBadgeBinder.swift  EngineController.swift  MessageStore.swift  OpenInNewWindowCommands.swift  PersistenceCoordinator.swift  PersistenceStore.swift  SQLiteMessageStore.swift  WindowSession.swift
apple/macos/Sources/HexChatAppleSmoke/: main.swift
apple/macos/Tests/HexChatAppleShellTests/: EngineControllerTests.swift  FileSystemPersistenceStoreTests.swift  SQLiteMessageStoreTests.swift
docs/: IRCV3_UX_AUDIT.md  XTEXT_MODERNIZATION_PLAN.md  validation-handoff.md
docs/plans/: 2026-04-16-python-native-embed-design.md  2026-04-21-data-model-migration.md  2026-04-22-data-model-phase-2-chatuser.md  2026-04-22-data-model-phase-3-network-connection-split.md  2026-04-23-data-model-phase-4-user-dedup.md  2026-04-23-phase-4-session-summary.md  2026-04-24-data-model-phase-5-message-structuring.md  2026-04-24-data-model-phase-6-persistence.md  2026-04-24-data-model-phase-7-message-persistence.md  2026-04-25-data-model-phase-7-5-chathistory-bridge.md  2026-04-26-data-model-phase-8-transferable-multi-window.md  2026-04-26-data-model-phase-9-selectedSessionID-decommission-design.md  2026-04-26-data-model-phase-9-selectedSessionID-decommission.md  2026-04-26-per-window-unread-design.md  2026-04-26-per-window-unread.md  2026-04-27-phase-11-dock-badge.md  2026-04-27-phase-12-read-marker.md
docs/superpowers/plans/: 2026-04-17-apple-adapter-phase1-review.md  2026-04-17-apple-adapter-phase1.md  2026-04-17-apple-basic-client-ui-design.md  2026-04-17-apple-shell-ui-review-fixes.md  2026-04-17-apple-swiftui-shell-phase2-review.md  2026-04-17-apple-swiftui-shell-phase2.md  2026-04-17-macos-launch-phase1.md
docs/superpowers/specs/: 2026-04-17-apple-basic-client-ui-design.md  2026-04-17-apple-frontend-design-review.md  2026-04-17-apple-frontend-design.md  2026-04-17-macos-app-python-bundling-design.md  2026-04-22-hexchatapple-basic-shim-ui-design.md
irctest/: hexchat.py
osx/: Info.plist.in  entitlements.plist  hexchat.bundle  launcher.sh  makebundle.sh  meson.build
plugins/checksum/: checksum.c
plugins/exec/: exec.c
plugins/fishlim/: dh1080.c  plugin_hexchat.c
plugins/lua/: lua.c
plugins/perl/: perl.c
plugins/python/: _hexchat.py  meson.build  python.py
plugins/python/py/hexchat/: __init__.py  _loader.py  _stdio.py
plugins/python/py/xchat/: __init__.py
plugins/python/src/: hc_python.c  hc_python.h  hc_python_attrs.c  hc_python_attrs.h  hc_python_console.c  hc_python_console.h  hc_python_hooks.c  hc_python_hooks.h  hc_python_interp.c  hc_python_interp.h  hc_python_module.c  hc_python_module.h  hc_python_plugin.c  hc_python_plugin.h
plugins/python/tests/: meson.build  stubs.c  stubs.h  test_api_core.c  test_api_hooks.c  test_empty_module.c  test_integration.c  test_interp_lifecycle.c  test_loader.c  test_plugin_owner.c
plugins/python/tests/fixtures/: sample_plugin.py
plugins/sasl/: sasl.c
plugins/sysinfo/: sysinfo.c
plugins/sysinfo/osx/: backend.m
plugins/sysinfo/unix/: parse.c
plugins/upd/: upd.c
plugins/winamp/: winamp.c
scripts/: apple-smoke-basic.sh  apple-swift-network-e2e.sh  apple-swiftui-smoke.sh  smoke_macos_hexchat_launch.sh
src/: meson.build
src/common/: cfgfiles.c  cfgfiles.h  chanopt.c  chathistory.c  chathistory.h  common.vcxproj  dcc.c  dcc.h  fe.h  hexchat-main.c  hexchat-plugin.h  hexchat.c  hexchat.h  hexchatc.h  ignore.c  ignore.h  inbound.c  inbound.h  meson.build  modes.c  network-icon.c  network-icon.h  network.c  notify.c  notify.h  oauth.c  oauth.h  outbound.c  outbound.h  plugin.c  plugin.h  proto-irc.c  proto-irc.h  scram.c  scrollback.c  scrollback.h  secure-storage.c  secure-storage.h  server.c  server.h  (+14 more)
src/common/zstd/: zstd.c
src/fe-apple/: apple-callback-log.c  apple-callback-log.h  apple-frontend.c  apple-runtime.c  apple-runtime.h  apple-smoke.c  hexchat-apple-public.h  hexchat-apple.h  meson.build  test-callback-log.c  test-cfgdir.c  test-chathistory-bridge.c  test-read-marker-bridge.c  test-runtime-events.c  test-runtime.c
src/fe-gtk/: ascii.c  banlist.c  chanlist.c  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  custom-list.h  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  fkeys.h  gtk-compat.h  gtk-helpers.h  gtkutil.c  gtkutil.h  hex-emoji-chooser.c  hex-emoji-chooser.h  hex-input-edit.c  hex-input-edit.h  hex-input-view.c  hex-input-view.h  ignoregui.c  joind.c  maingui.c  maingui.h  menu.c  menu.h  meson.build  notifygui.c  palette.c  pixmaps.c  plugin-tray.c  plugingui.c  rawlog.c  servlistgui.c  (+16 more)
src/fe-gtk/notifications/: notification-osx.m
src/fe-text/: fe-text.c  meson.build
win32/: hexchat.props
win32/copy/: copy.vcxproj
